# api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  get-requirements.py  oss.env  pyproject.toml  run-app.sh
.github/: dependabot.yml
configuration/: default.json  development.json  production.json  testing.json
db/: 0-schema.sql  1-trigger_api_key_permission_changes.sql  dummy_db.py  env.py  schema.sql  seeds.py
db/versions/: 03a61012d6f9_create_new_host_and_hostdate_.py  12aa20de16b0_delete_user_model.py  22ca4699f133_create_new_prompt_and_.py  22ca4699f133_create_new_prompt_tables_.py  958aed64a39e_create_indexes.py  b5f3addc3fb1_add_apikey_has_media.py  b9a085a1f8c1_rename_apikey_has_broadcast.py  c36c16d680a6_email_table_comment.py  cf379e9a2dc4_update_apikeyhistory_column_.py  e03e08dd379c_more_apikey_adjustments.py  ed1da33697ff_remove_old_v1_tables.py  f862f100f6fb_rename_promptmedia_media.py  f97b33a8b909_rename_apikey_has_api_key.py  fd1efe346516_rename_prompts_table.py
docker/: Dockerfile  docker-compose.yml
schema/: 0-schema.sql
scripts/: make_database.py
src/: app_factory.py  configuration.py  extensions.py  main.py
src/blueprints/: Prompt.py  Search.py  Writer.py  __init__.py
src/blueprints/v1/protected/: api_key.py  broadcast.py  config.py  host.py  settings.py  subscription.py  writer.py
src/blueprints/v1/public/: account.py  archive.py  broadcast.py  browse.py  download.py  host.py  prompt.py  search.py  subscription.py  writer.py
src/core/: auth_helpers.py  auth_helpers_v2.py  config.py  database.py  helpers.py  json_special.py  logger.py
src/core/database/: __init__.py  api.py  api_key.py  archive.py  core.py  host.py  models.py  prompt.py  settings.py  subscription.py
src/core/database/v2/: __init__.py  archive.py  emails.py  hosts.py  keys.py  prompts.py  subscription.py
src/core/email/: EmailTemplate.py  __init__.py  mailgun.py
src/core/helpers/: JsonEncode.py  __init__.py  media.py
src/core/models/v1/: ApiKey.py  Host.py  Prompt.py  Writer.py
src/core/models/v2/: Archive.py  Broadcast.py  Browse.py  Email.py  Emails.py  Generic.py  Hosts.py  Keys.py  Notification.py  Prompts.py  Search.py
src/templates/emails/: email.jinja2  email.txt  one-time-email.jinja2  one-time-email.txt
src/views/: __init__.py
src/views/protected/: broadcast.py  emails.py  keys.py  notifications.py
src/views/public/: archive.py  browse.py  emails.py  hosts.py  prompts.py  search.py
