[tool.poetry]
name = "vss365today-api"
version = "2.0.0a1"
description = "REST API for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.1.3"
gunicorn = "20.1.0"
Flask-Cors = "^3.0.9"
requests = "^2.29.0"
XlsxWriter = "^3.1.0"
tweepy = "^4.14.0"
SQLAlchemy = "2.0.10"
sys-vars = "^5.0.0"
urllib3 = "^1.26.14"
Flask-SQLAlchemy = "^3.0.3"
flask-smorest = "^0.41.0"
PyMySQL = "^1.0.2"
Flask-DB = "^0.3.2"
alembic = "^1.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2"
black = "^23.1"
types-requests = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
