[tool.poetry]
name = "vss365today-api"
version = "2.0.2"
description = "REST API for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "20.1.0"
Flask-Cors = "^3.0.9"
XlsxWriter = "^3.1.2"
tweepy = "^4.14.0"
SQLAlchemy = "2.0.15"
sys-vars = "^5.0.0"
urllib3 = "^2.0.2"
Flask-SQLAlchemy = "^3.0.3"
flask-smorest = "^0.42.0"
PyMySQL = "^1.0.2"
Flask-DB = "^0.3.2"
alembic = "^1.11.1"
httpx = "^0.24.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2"
black = "^23.1"
types-urllib3 = "^1.26.25.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
