[tool.poetry]
name = "vss365today-api"
version = "2.0.2"
description = "REST API for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "21.2.0"
Flask-Cors = "^4.0.0"
XlsxWriter = "^3.1.2"
tweepy = "^4.14.0"
SQLAlchemy = "2.0.20"
sys-vars = "^5.0.0"
Flask-SQLAlchemy = "^3.0.3"
flask-smorest = "^0.42.0"
PyMySQL = "^1.1.0"
Flask-DB = "^0.4.0"
alembic = "^1.11.2"
httpx = "^0.25.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5"
black = "^23.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
